<resources>
    <string name="app_name">Octagon</string>
    <string name="facebook_key">1673357266254895</string>
    <string name="status_bar_title">The Octagon Project</string>
    <string name="login_status">The Entire Holy Land in Virtual Reality!</string>
    <string name="login_ways">There are two ways to login.</string>
    <string name="way_facebook">1. Through your Facebook account.</string>
    <string name="way_username">2. Use your registered Octagon Project username and password.</string>
    <string name="text_username">Username (case sensitive)</string>
    <string name="text_password">Password (case sensitive)</string>
    <string name="remember_me">Remember Me</string>
    <string name="text_forgot">Forgot your username or password?</string>
    <string name="login">Log In</string>
    <string name="skip">Skip</string>
    <string name="go_to_tours">Go to the Tours</string>
    <string name="free_signup">Free Signup</string>
    <string name="shop">Shop</string>
    <string name="jump_to_tour">Jump to Any Tour</string>
    <string name="go_on_tours">Go on tour for free with an expertly-guided virtual-reality pilgrimage to the Holy Land</string>
    <string name="online_tour_more_info">Click here for more information about this tour</string>
    <string name="online_tour_1">In this primer we will begin our 30-tour expedition by taking you to many sites throughout the Holy Land.  On this tour you will quickly discover that the four Gospels describe the geography of this land with incredible accuracy, lending strong credibility to the notion that the original Gospels were authored by men who actually lived here.</string>
    <string name="online_tour_2">In these stories, there were many events recorded in the Gospels that occurred all over the land of Israel, prior to the time of Jesus’ birth, with several stops including Nazareth, the Temple Mount, and Ein Karem (the birthplace of John the Baptist). You will actually go into the Dome of the Rock, and down into the Cave of Souls, under the stone where the Holy of Holies once stood.</string>
    <string name="online_tour_3">This exciting pilgrimage is all about the places and events related to the birth of Jesus. In this excursion you will actually celebrate Christmas Eve in Bethlehem. You will stand in the room where Jesus was born, and you will visit the home where He lived as an infant. You will walk through the caves of the shepherds, and gaze inside their tomb. You will see the graveyard and the bones of the baby boys who died in Bethlehem, and you will spend time in the cave where the Magi hid from King Herod. You will also see the home, most often accepted as the place where Jesus grew up.</string>
    <string name="online_tour_4">On this expedition you will walk through Qumran, you\'ll stand beside the Jordan River, and you will take a cable car up to the Monastery of the Temptation. You will also visit many sites in the country of Jordan that are related to the Gospel, including the place where Jesus was baptized, and the cave home of John the Baptist.</string>
    <string name="online_tour_5">According to The Merged Gospels, Jesus first started gathering disciples in Galilee, and that’s where this tour is located.  The Apostles John and Andrew probably met Jesus on the east side of the Jordan River near Lake Galilee.  Many scholars also believe that John baptized here.  You will walk on the streets of Bethsaida, the hometown of many of Jesus\' Apostles, and you will also visit Cana, where you will see what may be the stone water pots that Jesus used when He turned water into wine. Lastly you will see the church that was built over the traditional home of Nathanael, the Apostle.</string>
    <string name="online_tour_6">This was Jesus first recorded journey to Jerusalem after He began His ministry.  On this tour, you will walk through the Temple Mount, as well as the ruins of Capernaum and Tiberias.  We will also take you to the Gethsemane Grotto, where Jesus probably met with Nicodemus, and then to Ainon near Salim, where John the Baptist was probably arrested.</string>
    <string name="online_tour_7">Our itinerary for this tour will take us through Nablus, where Jesus met the woman at the well, and where you will see what is believed to be a fragment from her skull.  You will visit her home of Sychar (modern Tel Balata).  Then we\'ll go to the top of Mount Gerazim, where 700 Samaritans still live.  You\'ll walk through the location of Jesus\' boyhood synagogue, and you will look over the hill where an angry mob tried to kill Him.</string>
    <string name="online_tour_8">As soon as Jesus appeared in Capernaum, the miracles started to happen. One-fifth of all the stories in The Merged Gospels took place on the streets of Capernaum, and this is where a wealth of Jesus’ teaching occurred. On this exciting tour, will take you all over this ancient city, as well as several other nearby towns that Jesus visited. You will even walk on the path that Jesus took as He traveled from Nazareth to Lake Galilee.</string>
    <string name="online_tour_9">To begin, on this tour you will visit the cave that Jesus prayed in the night before He gave the most famous sermon in the history of the world. Then we will ascend to the top of the ridge, where Jesus selected His Apostles from the disciples who were present. Lastly, you will stand in the very same place that Jesus stood when He delivered the Sermon on the Mount.</string>
    <string name="online_tour_10">On this tour you will take a chartered boat ride on the Sea of Galilee, where you will get a unique 360-degree perspective of the northern shoreline. Through the miracle of immersive video we will take you to Kursi, where Jesus cast the demons into the swine. You will actually go into the caves where the demoniacs used to live - a place that is still the lair of wild boars. There is so much to see, including Nain, where Jesus raised a widow’s son, the Bay of Parables, and the ancient city of Magdala, the hometown of Mary Magdalene.</string>
    <string name="online_tour_11">This tour takes you back to Jerusalem, where you will stand in the Pool of Bethesda, where the ruins are all around you. Here a man had been crippled for 38 years. There’s quite a bit to see, including The Temple Mount, and St. Stephen’s Gate, where it is believed that Stephen was stoned. As an extra treat, we are going to take you down into the Grotto of Jerome, one of the most influential men in all of church history, and explore the secrets of his cave.</string>
    <string name="online_tour_12">On this tour you will stand on the very spot where Jesus probably fed the 5000, and you will walk on the boat dock where He moored near the Gennesaret valley. You will not only walk through the ancient crypt at the Church of St. John the Baptist, but you will enter the ancient tomb where John was buried next to the prophet Elisha. You will enter the Treasure Room at the Church of the Holy Sepulcher, where you will see the skullcap of John, and wood that is believed to be from the cross of Jesus.</string>
    <string name="online_tour_13">This itinerary will take you into some regions less familiar to Israel travelers. We will travel through the Golan Heights to visit Caesarea Philipi, where you actually enter the ancient temple of Pan. You will walk through the streets of Bethsaida, ruins relatively untouched for over 1000 years. You will also ascend Mount Tabor, the traditional site of the Transfiguration. You will walk through Nimrod\'s majestic fortress in the Golan Heights. Lastly you will walk into the Church of the Multiplication, and stand on the site where some believe that Jesus fed the 4000.</string>
    <string name="online_tour_14">One of the most beautiful places on earth is Ein Fawar. This was Jesus’ walking path to Jericho, and it was the site of His Good Samaritan parable. This is one of the places where you can actually stand in Jesus’ three-foot circle. And you will experience the breathtaking sights from the Monastery of St. George, perched high on the cliff of this canyon. Lastly, you will walk through the ruins of Korazim, a city that Jesus cursed. As a side trip, we\'re going to take you back to the Golan Heights to ruins of Tel Dan.</string>
    <string name="tour_1_heading">Tour 1 - The Prologue To The Gospel</string>
    <string name="tour_2_heading">Tour 2 - The Years Before Christ</string>
    <string name="tour_3_heading">Tour 3 - The Nativity</string>
    <string name="tour_4_heading">Tour 4 - John The baptist</string>
    <string name="tour_5_heading">Tour 5 - The First Disciples</string>
    <string name="tour_6_heading">Tour 6 - Jesus In Jerusalem</string>
    <string name="tour_7_heading">Tour 7 - The Journey To Nazareth</string>
    <string name="tour_8_heading">Tour 8 - Jesus\' Ministry In Capernaum</string>
    <string name="tour_9_heading">Tour 9 - The Sermon On The Mount</string>
    <string name="tour_10_heading">Tour 10 - Jesus\' Ministry In Galilee</string>
    <string name="tour_11_heading">Tour 11 - The Healings in Jerusalem</string>
    <string name="tour_12_heading">Tour 12 - Adventures in Discipleship</string>
    <string name="tour_13_heading">Tour 13 - Ministry to the Gentiles</string>
    <string name="tour_14_heading">Tour 14 - Lessons on Discipleship</string>
    <string name="tour_15_heading">Tour 15 - The Mount of Olives</string>
    <string name="tour_16_heading">Tour 16 - Jesus\' Confrontation with the Jews</string>
    <string name="tour_17_heading">Tour 17 - Bethany and the city of David</string>
    <string name="tour_18_heading">TOUR 18 - THE CAPERNAUM LESSONS</string>
    <string name="tour_19_heading">Tour 19 - The Final path of Jerusalem</string>
    <string name="tour_20_heading">Tour 20 - The Journey Through Samaria</string>
    <string name="tour_21_heading">Tour 21 - The Jericho That Jesus Knew</string>
    <string name="tour_22_heading">Tour 22 - The Triumphal Ride</string>
    <string name="tour_23_heading">Tour 23 - The Temple Homily</string>
    <string name="tour_24_heading">Tour 24 - The Olivet Discourse</string>
    <string name="tour_25_heading">Tour 25 - The Last Passover</string>
    <string name="tour_26_heading">Tour 26 - Gethsemane</string>
    <string name="tour_27_heading">Tour 27 - The Trials Of Jesus</string>
    <string name="tour_28_heading">Tour 28 - The Death Of Jesus</string>
    <string name="tour_29_heading">Tour 29 - The Glorified Christ</string>
    <string name="tour_30_heading">Tour 30 - The Final Days Of Jesus</string>
    <string name="order_your_copy">Order your copy of The Merged Gospels by clicking on the picture above.</string>
    <string name="bottom_online_tours">Our Online 360° Tours</string>
    <string name="bottom_shop">Shop</string>
    <string name="bottom_live_tours">Live Tours to the Holy Land</string>
    <string name="bottom_faq">FAQ and System Requirements</string>
    <string name="bottom_reviews">Merged Gospels Scholarly Reviews</string>
    <string name="bottom_comments">Merged Gospels Customer Comments</string>
    <string name="bottom_about_us">About Us</string>
    <string name="bottom_bookstore">Local Bookstore Policy</string>
    <string name="bottom_policy">Privacy Policy</string>
    <string name="bottom_permissions">Filming Permissions</string>
    <string name="bottom_photos">Press Photos</string>
    <string name="bottom_more_videos">More Videos</string>
    <string name="bottom_contact_us">Contact Us</string>
    <string name="bottom_message">Click here to send us a message</string>
    <string name="bottom_address">The Octagon Project\nPO Box 691705\nSan Antonio, TX 78269-1705</string>
</resources>