<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@drawable/toolbar"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:popupTheme="@style/AppTheme.PopupOverlay">

    <RelativeLayout
        android:id="@+id/rl_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/margin_10"
            android:src="@drawable/ic_menu"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/margin_5"
            android:src="@drawable/ic_arrow_back"
            android:visibility="visible" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/rl_menu"
        android:src="@drawable/app_icon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/img_logo"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_bar_title"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_status"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_10" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/font_16"
        android:visibility="gone" />
</RelativeLayout>
